Fixing Form On Mobile Screens

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ html {
 }
 
 body {
-  height: 100vh;
   color: #495057;
   display: flex;
   align-items: center;
@@ -133,8 +132,15 @@ form {
   padding: 1.2rem;
 }
 .form-split-bill {
-  grid-template-columns: 1fr 12rem;
+  grid-template-columns: 1fr auto;
   padding: 3.2rem 4rem;
+}
+
+@media screen and (max-width: 500px) {
+  .form-split-bill {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 label {
@@ -152,12 +158,18 @@ input,
 select {
   font-family: inherit;
   color: inherit;
-  font-size: 1.5rem;
   padding: 0.7rem;
   text-align: center;
   border: 1px solid var(--color-light);
   border-radius: 4px;
   transition: 0.3s;
+}
+
+@media screen and (max-width: 500px) {
+  input,
+  select {
+    margin-bottom: 15px;
+  }
 }
 
 input:focus,
